--- a/LaythAssign33/src/main/res/values-fr/strings.xml
+++ b/LaythAssign33/src/main/res/values-fr/strings.xml
@@ -2,5 +2,10 @@
 <resources>
     <string name="app_name">LaythAssign3</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment">Hello blank fragment1</string>
+    <string name="hello_blank_fragment2">Hello blank fragment2</string>
+    <string name="hello_blank_fragment3">Hello blank fragment3</string>
+    <string name="tab_text_1">Speed Dial</string>
+    <string name="tab_text_2">Recents</string>
+    <string name="tab_text_3">Contacts</string>
 </resources>
