--- a/LaythAssign33/src/main/res/values/strings.xml
+++ b/LaythAssign33/src/main/res/values/strings.xml
@@ -2,5 +2,11 @@
 <resources>
     <string name="app_name">Layth Mahfoodh s991523983</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment">Hello blank fragment1</string>
+    <string name="hello_blank_fragment2">Hello blank fragment2</string>
+    <string name="hello_blank_fragment3">Hello blank fragment3</string>
+    <string name="tab_text_1">Tab 1</string>
+    <string name="tab_text_2">Tab 2</string>
+    <string name="tab_text_3">Tab 3</string>
+    <string name="frag1_text">Layth Mahfoodh S991423983</string>
 </resources>
